--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,22 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
+
+.appMainContainer {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #F5F5F5;
+}
