--- a/stylesheets/ideaCard.css
+++ b/stylesheets/ideaCard.css
@@ -1,6 +1,6 @@
 .ideaContainer {
     position: fixed;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     display: none;
     align-items: center;
@@ -18,5 +18,13 @@
 }
 
 .ActiveModule {
-    display: flex;
+    display: inline;
+}
+
+
+@media only screen and (max-width: 1000px) {
+    .ideaSection {
+        width: 70%;
+        height: 70%;
+    }
 }
